--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "express": "^4.16.4",
     "npm-run-all": "^4.1.5",
+    "redux": "^4.0.5",
     "superagent": "^5.0.2"
   },
   "devDependencies": {
@@ -45,12 +46,12 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.7.1",
     "babel-loader": "^8.0.6",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2",
+    "css-loader": "^3.4.2",
     "jest": "^24.7.1",
     "nodemon": "^1.19.2",
     "react": "^16.8.6",
     "react-dom": "^16.12.0",
+    "style-loader": "^1.1.3",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
     "webpack-dev-server": "^3.2.1"
