--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
   },
   "dependencies": {
     "express": "^4.16.4",
+    "knex": "^0.20.13",
+    "mysql": "^2.18.1",
     "npm-run-all": "^4.1.5",
     "redux": "^4.0.5",
     "superagent": "^5.0.2"
@@ -51,6 +53,7 @@
     "nodemon": "^1.19.2",
     "react": "^16.8.6",
     "react-dom": "^16.12.0",
+    "sqlite3": "^4.1.1",
     "style-loader": "^1.1.3",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.3.0",
